It's more correct to not have a transition for repositioning of touch as user can lift finger off screen and place elsewhere; however we can now have much smoother touch movement during the .touch-active phase as we know the finger is on the screen. This has a .25s delaying effect on the touch position which IMO is acceptable; e.g. scroll position can lag behind a touch movement and this seems to bring them more in sync

--- a/packages/rrweb/src/replay/styles/style.css
+++ b/packages/rrweb/src/replay/styles/style.css
@@ -35,10 +35,11 @@
   margin-left: -37px;
   margin-top: -37px;
   border-color: rgba(73, 80, 246, 0);
-  transition: left 0.05s linear, top 0.05s linear, border-color 0.2s ease-in-out;
+  transition: left 0s linear, top 0s linear, border-color 0.2s ease-in-out;
 }
 .replayer-mouse.touch-device.touch-active {
   border-color: rgba(73, 80, 246, 1);
+  transition: left 0.25s linear, top 0.25s linear, border-color 0.2s ease-in-out;
 }
 .replayer-mouse.touch-device::after {
   opacity: 0;  /* there's no passive cursor on touch-only screens */
